--- a/ProyectoFinalKermesse/Views/Gastoes/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Gastoes/Index.cshtml
@@ -126,13 +126,28 @@
                     @Html.DisplayFor(modelItem => item.Usuario2.userName)
                 </td>
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    <button class="btn">
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                        @Html.ActionLink("Editar", "Edit", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    </button>
 
-                    @Html.ActionLink("Detalles", "Details", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    <button class="btn">
+                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Detalles", "Details", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    </button>
 
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    <button class="btn">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    </button>
 
-                    @Html.ActionLink("Ver Reporte", "VerReporteGastoDetalle", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    <button class="btn">
+                        <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Ver Reporte", "VerReporteGastoDetalle", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                    </button>
+
+
+                  
                 </td>
             </tr>
         }
