--- a/ProyectoFinalKermesse/Views/RolOpcions/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/RolOpcions/Index.cshtml
@@ -58,10 +58,12 @@
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Opcion1.opcionDescripcion)
+                @*@Html.DisplayNameFor(model => model.Opcion1.opcionDescripcion)*@
+                Descripción
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Rol1.rolDescripcion)
+                @*@Html.DisplayNameFor(model => model.Rol1.rolDescripcion)*@
+                Rol
             </th>
             <th></th>
         </tr>
