--- a/ProyectoFinalKermesse/Views/RolUsuarios/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/RolUsuarios/Index.cshtml
@@ -55,10 +55,12 @@
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Rol1.rolDescripcion)
+                @*@Html.DisplayNameFor(model => model.Rol1.rolDescripcion)*@
+                Rol Descripcion
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Usuario1.userName)
+                @*@Html.DisplayNameFor(model => model.Usuario1.userName)*@
+                Nombre de Usuario
             </th>
             <th></th>
         </tr>
