--- a/ProyectoFinalKermesse/Reportes/RptIngresoComunidad.rdlc
+++ b/ProyectoFinalKermesse/Reportes/RptIngresoComunidad.rdlc
@@ -6,16 +6,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.74715cm</Width>
+              <Width>5.8957cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.75799cm</Width>
+              <Width>4.55472cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.23632cm</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>4.47294cm</Width>
+              <Width>4.94919cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>4.7225cm</Width>
@@ -25,51 +22,6 @@
             <TablixRow>
               <Height>0.6cm</Height>
               <TablixCells>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox1">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>ID</Value>
-                              <Style>
-                                <FontFamily>Roboto</FontFamily>
-                                <FontWeight>Bold</FontWeight>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value />
-                              <Style>
-                                <FontFamily>Roboto</FontFamily>
-                                <FontWeight>Bold</FontWeight>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox1</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Textbox3">
@@ -209,14 +161,14 @@
               <TablixCells>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="idIngresoComunidad">
+                    <Textbox Name="Kermesse">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!idIngresoComunidad.Value</Value>
+                              <Value>=Fields!Kermesse.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
                               </Style>
@@ -225,7 +177,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>idIngresoComunidad</rd:DefaultName>
+                      <rd:DefaultName>Kermesse</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -241,14 +193,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="kermesse">
+                    <Textbox Name="Comunidad">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!kermesse.Value</Value>
+                              <Value>=Fields!Comunidad.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
                               </Style>
@@ -257,7 +209,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>kermesse</rd:DefaultName>
+                      <rd:DefaultName>Comunidad</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -273,14 +225,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="comunidad">
+                    <Textbox Name="Producto">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!comunidad.Value</Value>
+                              <Value>=Fields!Producto.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
                               </Style>
@@ -289,7 +241,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>comunidad</rd:DefaultName>
+                      <rd:DefaultName>Producto</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -305,14 +257,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="producto">
+                    <Textbox Name="Cant">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!producto.Value</Value>
+                              <Value>=Fields!Cant.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
                               </Style>
@@ -321,39 +273,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>producto</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="cantProducto">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=Fields!cantProducto.Value</Value>
-                              <Style>
-                                <FontFamily>Roboto</FontFamily>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>cantProducto</rd:DefaultName>
+                      <rd:DefaultName>Cant</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -377,7 +297,6 @@
             <TablixMember />
             <TablixMember />
             <TablixMember />
-            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -391,10 +310,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DsIngresoComunidad</DataSetName>
-        <Top>0.72792cm</Top>
+        <Top>1.07188cm</Top>
         <Left>0.89641cm</Left>
         <Height>1.2cm</Height>
-        <Width>19.9369cm</Width>
+        <Width>20.12211cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -646,31 +565,31 @@
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="idIngresoComunidad">
-          <DataField>idIngresoComunidad</DataField>
+        <Field Name="id">
+          <DataField>id</DataField>
           <rd:TypeName>System.Int16</rd:TypeName>
         </Field>
-        <Field Name="kermesse">
-          <DataField>kermesse</DataField>
-          <rd:TypeName>System.Int16</rd:TypeName>
+        <Field Name="Kermesse">
+          <DataField>Kermesse</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="comunidad">
-          <DataField>comunidad</DataField>
-          <rd:TypeName>System.Int16</rd:TypeName>
+        <Field Name="Comunidad">
+          <DataField>Comunidad</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="producto">
-          <DataField>producto</DataField>
-          <rd:TypeName>System.Int16</rd:TypeName>
+        <Field Name="Producto">
+          <DataField>Producto</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="cantProducto">
-          <DataField>cantProducto</DataField>
+        <Field Name="Cant">
+          <DataField>Cant</DataField>
           <rd:TypeName>System.Int16</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>DsReportes</rd:DataSetName>
         <rd:SchemaPath>C:\Users\Admin\Downloads\ProyectoFinalKermesse-a49105e2218eb8005ce6c141ccfebd890e9050c9\ProyectoFinalKermesse\DataSet\DsReportes.xsd</rd:SchemaPath>
-        <rd:TableName>IngresoComunidad </rd:TableName>
+        <rd:TableName>VwIngresoComunidad</rd:TableName>
         <rd:TableAdapterFillMethod />
         <rd:TableAdapterGetDataMethod />
         <rd:TableAdapterName />
