--- a/ProyectoFinalKermesse/Views/ArqueoCajaDets/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/ArqueoCajaDets/Index.cshtml
@@ -66,7 +66,10 @@
                 </td>
                 <td>
                     @Html.ActionLink("Editar", "Edit", new { id = item.idArqueoCajaDet }, new { @style = "color: #779FA1" }) |
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
                     @Html.ActionLink("Detalles", "Details", new { id = item.idArqueoCajaDet }, new { @style = "color: #779FA1" }) |
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
                     @Html.ActionLink("Eliminar", "Delete", new { id = item.idArqueoCajaDet }, new { @style = "color: #779FA1" })
                 </td>
             </tr>
