--- a/ProyectoFinalKermesse/Views/ArqueoCajas/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/ArqueoCajas/Index.cshtml
@@ -87,9 +87,21 @@
                     @Html.DisplayFor(modelItem => item.Usuario2.userName)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.idArqueoCaja }, new { @style = "color: #779FA1" }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.idArqueoCaja }, new { @style = "color: #779FA1" }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.idArqueoCaja }, new { @style = "color: #779FA1" })
+                    <button class="btn">
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>
+                        @Html.ActionLink("Editar", "Edit", new { id = item.idArqueoCaja }, new { @style = "color: #779FA1" })
+                    </button>
+
+                    <button class="btn">
+                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Detalles", "Details", new { id = item.idArqueoCaja }, new { @style = "color: #779FA1" })
+                    </button>
+
+                    <button class="btn">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idArqueoCaja }, new { @style = "color: #779FA1" })
+                    </button>
+                  
                 </td>
             </tr>
         }
