--- a/ProyectoFinalKermesse/Views/Denominacions/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Denominacions/Index.cshtml
@@ -37,7 +37,8 @@
                     @Html.DisplayNameFor(model => model.estado)
                 </th>*@
             <th>
-                @Html.DisplayNameFor(model => model.Moneda1.nombre)
+                @*@Html.DisplayNameFor(model => model.Moneda1.nombre)*@
+                Moneda
             </th>
             <th></th>
         </tr>
@@ -58,8 +59,11 @@
                     @Html.DisplayFor(modelItem => item.Moneda1.nombre)
                 </td>
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.idDenominacion }, new { @style = "color: #779FA1" }) |
+                    @Html.ActionLink("Editar", "Edit", new { id = item.idDenominacion }, new { @style = "color: #779FA1" })
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
+                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
                     @Html.ActionLink("Detalles", "Details", new { id = item.idDenominacion }, new { @style = "color: #779FA1" }) |
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
                     @Html.ActionLink("Eliminar", "Delete", new { id = item.idDenominacion }, new { @style = "color: #779FA1" })
                 </td>
             </tr>
