--- a/ProyectoFinalKermesse/Views/TasaCambios/Details.cshtml
+++ b/ProyectoFinalKermesse/Views/TasaCambios/Details.cshtml
@@ -1,59 +1,82 @@
 ﻿@model ProyectoFinalKermesse.Models.TasaCambio
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>TasaCambio</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.mes)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.mes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.anio)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.anio)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.estado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.estado)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Moneda.nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Moneda.nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Moneda1.nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Moneda1.nombre)
-        </dd>
-
-    </dl>
+    <ol class="breadcrumb" style="background:none; font-size: 18px">
+        <li><a href="#">  @Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Gestiones", "Index", "Gestion", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Tasa de Cambio", "Index", "TasaCambios", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li class="active"> Detalles  </li>
+    </ol>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.idTasaCambio }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<div class="container">
+    <h2>Detalles</h2>
+    <h3> Tasa de Cambio </h3>
+
+    <div>
+
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.mes)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.mes)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.anio)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.anio)
+            </dd>
+
+            @*<dt>
+                    @Html.DisplayNameFor(model => model.estado)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.estado)
+                </dd>*@
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Moneda.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Moneda.nombre)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Moneda1.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Moneda1.nombre)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+
+
+        <button class="btn-primary" style="background-color: #779FA1">
+            <span class="glyphicon glyphicon-hand-left" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+            @Html.ActionLink("Regresar", "Index", "Usuarios", new { @style = "color:white;" })
+        </button>
+
+        <button type="submit" class="btn-primary" style="background-color: #779FA1">
+            <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+            @Html.ActionLink("Editar", "Edit", new { id = Model.idTasaCambio }, new { @style = "color:white;" })
+        </button>
+    </p>
+
+</div> 
